--- a/tablecss.css
+++ b/tablecss.css
@@ -1,8 +1,3 @@
-
-body {
-    background-color: white;
-     }
-
 h1 {
   background-color: #f2f2f2;
   text-align: center;
@@ -11,7 +6,7 @@ h1 {
    }
 
 h3 {
-text-decoration-color: #004040;
+text-decoration-color: #52cfcf;
 text-align: center;
   }
 
